// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month #render renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-11-29"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-11-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-06"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-06T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-13"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-13T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-20"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-20T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-27"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`disableDaysOfWeek\` is defined renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-11-29"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-11-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-06"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-06T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-13"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-13T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-20"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-20T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-27"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`minDate\` and \`maxDate\` are defined when prop \`rangeLimit\` doesn't exceed \`minDate\` and \`maxDate\` renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-11-29"
    maxDate={"2000-01-15T22:00:00.000-02:00"}
    minDate={"1999-12-26T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-11-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-06"
    maxDate={"2000-01-15T22:00:00.000-02:00"}
    minDate={"1999-12-26T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-06T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-13"
    maxDate={"2000-01-15T22:00:00.000-02:00"}
    minDate={"1999-12-26T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-13T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-20"
    maxDate={"2000-01-15T22:00:00.000-02:00"}
    minDate={"1999-12-26T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-20T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-27"
    maxDate={"2000-01-15T22:00:00.000-02:00"}
    minDate={"1999-12-26T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`minDate\` and \`maxDate\` are defined when prop \`rangeLimit\` exceed \`minDate\` and \`maxDate\` renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-11-29"
    maxDate={"1999-12-26T22:00:00.000-02:00"}
    minDate={"1999-12-10T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-11-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-06"
    maxDate={"1999-12-26T22:00:00.000-02:00"}
    minDate={"1999-12-10T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-06T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-13"
    maxDate={"1999-12-26T22:00:00.000-02:00"}
    minDate={"1999-12-10T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-13T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-20"
    maxDate={"1999-12-26T22:00:00.000-02:00"}
    minDate={"1999-12-10T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-20T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"1999-12-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="1999-12-27"
    maxDate={"1999-12-26T22:00:00.000-02:00"}
    minDate={"1999-12-10T22:00:00.000-02:00"}
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"1999-12-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has less weeks than defined renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-01"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-01T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-08"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-08T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-15"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-15T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-22"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-22T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-03-01"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-03-01T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has more weeks than as defined renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-07-27"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-07-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-03"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-03T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-10"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-10T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-17"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-17T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-24"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-24T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-31"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-31T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`minNumberOfWeeks\` is defined when prop \`activeMonth\` has the same number of weeks as defined renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-01"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-01T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-08"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-08T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-15"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-15T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-22"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-22T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-29"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 4 weeks renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-01"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-01T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-08"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-08T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-15"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-15T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2010-02-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2010-02-22"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2010-02-22T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 5 weeks renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-01"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-01T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-08"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-08T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-15"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-15T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-22"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-22T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-06-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-06-29"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-06-29T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;

exports[`Month #render when prop \`month\` has 6 weeks renders <Month /> 1`] = `
<div
  className="simple-react-calendar-month"
>
  <DaysOfWeek
    blockClassName="simple-react-calendar"
    daysOfWeek={
      Array [
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
        "Sun",
      ]
    }
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-07-27"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-07-27T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-03"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-03T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-10"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-10T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-17"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-17T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-24"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-24T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
  <Week
    activeMonth={"2015-08-01T00:00:00.000-02:00"}
    blockClassName="simple-react-calendar"
    key="2015-08-31"
    onDayClick={[Function]}
    onDayMouseEnter={[Function]}
    onDisabledDayClick={[Function]}
    startOfWeek={"2015-08-31T00:00:00.000-02:00"}
    today={"1999-12-31T22:00:00.000-02:00"}
  />
</div>
`;
